# sqlite-clr

./: Makefile.in
autoconf/: Makefile.am
tool/: kvtest-speed2.sh  run-speed-test.sh  speed-check.sh
